tests/errors/block_argument_missing.dang
# Test: Missing block argument when required

pub numbers: [Int!]! = [1, 2, 3]

# ERROR: function requires a block argument
pub result: [Int!]! = numbers.map()
